--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autoprefixer": "^10.4.19",
     "firebase": "^10.12.0",
     "ionicons": "^7.0.0",
+    "mobx": "^6.12.3",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
