--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "firebase": "^10.12.0",
     "ionicons": "^7.0.0",
     "mobx": "^6.12.3",
+    "mobx-react": "^9.1.1",
     "postcss": "^8.4.38",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
