--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
+    "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
