--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
+    "@capacitor/push-notifications": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
     "@ionic/pwa-elements": "^3.2.2",
