--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@capacitor/push-notifications": "^6.0.0",
     "@capacitor/splash-screen": "^6.0.0",
     "@capacitor/status-bar": "^6.0.0",
+    "@capacitor/toast": "^6.0.0",
     "@ionic/pwa-elements": "^3.2.2",
     "@ionic/react": "^8.0.0",
     "@ionic/react-router": "^8.0.0",
