--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@capacitor/app": "6.0.0",
     "@capacitor/camera": "^6.0.0",
     "@capacitor/core": "^6.0.0",
+    "@capacitor/geolocation": "^6.0.0",
     "@capacitor/haptics": "6.0.0",
     "@capacitor/ios": "6.0.0",
     "@capacitor/keyboard": "6.0.0",
