--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-icons": "^5.2.1",
     "react-router": "^5.3.4",
     "react-router-dom": "^5.3.4",
+    "react-tooltip": "^5.26.4",
     "swiper": "^11.1.3",
     "tailwindcss": "^3.4.3"
   },
