--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@types/react-router-dom": "^5.3.3",
     "autoprefixer": "^10.4.19",
     "firebase": "^10.12.0",
+    "geofire-common": "^6.0.0",
     "ionicons": "^7.0.0",
     "mobx": "^6.12.3",
     "mobx-react": "^9.1.1",
