--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-VITE_API_KEY="AIzaSyC8EbcRqe4j-xjvvg3LZZpvqt9IDlhdpZo"
-VITE_AUTH_DOMAIN="beunreal-b282b.firebaseapp.com"
-VITE_PROJECT_ID="beunreal-b282b"
-VITE_STORAGE_BUCKET="beunreal-b282b.appspot.com"
-VITE_MESSAGING_SENDER_ID="77689837748"
-VITE_APP_ID="1:77689837748:web:ac91383f37bb08de6b9fe1"
-VITE_MEASUREMENT_ID="G-NKSDGM23J6"
+VITE_API_KEY="YOUR_API_KEY"
+VITE_AUTH_DOMAIN="YOUR_AUTH_DOMAIN"
+VITE_PROJECT_ID="YOUR_PROJECT_ID"
+VITE_STORAGE_BUCKET="YOUR_STORAGE_BUCKET"
+VITE_MESSAGING_SENDER_ID="YOUR_MESSAGING_SENDER_ID"
+VITE_APP_ID="YOUR_APP_ID"
+VITE_MEASUREMENT_ID="YOU_MEASUREMENT_ID"
