chore: Update Info.plist

--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -1,49 +1,164 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
-	<key>CFBundleDisplayName</key>
-        <string>BeUnreal</string>
-	<key>CFBundleExecutable</key>
-	<string>$(EXECUTABLE_NAME)</string>
-	<key>CFBundleIdentifier</key>
-	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
-	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.0</string>
-	<key>CFBundleName</key>
-	<string>$(PRODUCT_NAME)</string>
-	<key>CFBundlePackageType</key>
-	<string>APPL</string>
-	<key>CFBundleShortVersionString</key>
-	<string>$(MARKETING_VERSION)</string>
-	<key>CFBundleVersion</key>
-	<string>$(CURRENT_PROJECT_VERSION)</string>
-	<key>LSRequiresIPhoneOS</key>
-	<true/>
-	<key>UILaunchStoryboardName</key>
-	<string>LaunchScreen</string>
-	<key>UIMainStoryboardFile</key>
-	<string>Main</string>
-	<key>UIRequiredDeviceCapabilities</key>
-	<array>
-		<string>armv7</string>
-	</array>
-	<key>UISupportedInterfaceOrientations</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UISupportedInterfaceOrientations~ipad</key>
-	<array>
-		<string>UIInterfaceOrientationPortrait</string>
-		<string>UIInterfaceOrientationPortraitUpsideDown</string>
-		<string>UIInterfaceOrientationLandscapeLeft</string>
-		<string>UIInterfaceOrientationLandscapeRight</string>
-	</array>
-	<key>UIViewControllerBasedStatusBarAppearance</key>
-	<true/>
-</dict>
+	<dict>
+		<key>
+			CFBundleDevelopmentRegion
+		</key>
+		<string>
+			en
+		</string>
+		<key>
+			CFBundleDisplayName
+		</key>
+		<string>
+			BeUnreal
+		</string>
+		<key>
+			CFBundleExecutable
+		</key>
+		<string>
+			$(EXECUTABLE_NAME)
+		</string>
+		<key>
+			CFBundleIdentifier
+		</key>
+		<string>
+			$(PRODUCT_BUNDLE_IDENTIFIER)
+		</string>
+		<key>
+			CFBundleInfoDictionaryVersion
+		</key>
+		<string>
+			6.0
+		</string>
+		<key>
+			CFBundleName
+		</key>
+		<string>
+			$(PRODUCT_NAME)
+		</string>
+		<key>
+			CFBundlePackageType
+		</key>
+		<string>
+			APPL
+		</string>
+		<key>
+			CFBundleShortVersionString
+		</key>
+		<string>
+			$(MARKETING_VERSION)
+		</string>
+		<key>
+			CFBundleVersion
+		</key>
+		<string>
+			$(CURRENT_PROJECT_VERSION)
+		</string>
+		<key>
+			LSRequiresIPhoneOS
+		</key>
+		<true />
+		<key>
+			UILaunchStoryboardName
+		</key>
+		<string>
+			LaunchScreen
+		</string>
+		<key>
+			UIMainStoryboardFile
+		</key>
+		<string>
+			Main
+		</string>
+		<key>
+			UIRequiredDeviceCapabilities
+		</key>
+		<array>
+			<string>
+				armv7
+			</string>
+		</array>
+		<key>
+			UISupportedInterfaceOrientations
+		</key>
+		<array>
+			<string>
+				UIInterfaceOrientationPortrait
+			</string>
+			<string>
+				UIInterfaceOrientationLandscapeLeft
+			</string>
+			<string>
+				UIInterfaceOrientationLandscapeRight
+			</string>
+		</array>
+		<key>
+			UISupportedInterfaceOrientations~ipad
+		</key>
+		<array>
+			<string>
+				UIInterfaceOrientationPortrait
+			</string>
+			<string>
+				UIInterfaceOrientationPortraitUpsideDown
+			</string>
+			<string>
+				UIInterfaceOrientationLandscapeLeft
+			</string>
+			<string>
+				UIInterfaceOrientationLandscapeRight
+			</string>
+		</array>
+		<key>
+			UIViewControllerBasedStatusBarAppearance
+		</key>
+		<key>
+			NSCameraUsageDescription
+		</key>
+		<key>
+			NSCameraUsageDescription
+		</key>
+		<string>
+			Cette application nécessite l'accès à la caméra pour prendre des photos.
+		</string>
+		<key>
+			NSPhotoLibraryUsageDescription
+		</key>
+		<string>
+			Cette application nécessite l'accès à la bibliothèque de photos pour sélectionner des photos.
+		</string>
+		<key>
+			NSLocationWhenInUseUsageDescription
+		</key>
+		<string>
+			Cette application nécessite l'accès à la localisation lorsque l'application est en cours d'utilisation pour fournir des informations basées sur la localisation.
+		</string>
+		<key>
+			NSLocationAlwaysUsageDescription
+		</key>
+		<string>
+			Cette application nécessite l'accès à la localisation en tout temps pour fournir des notifications basées sur la localisation.
+		</string>
+		<key>
+			NSLocationAlwaysAndWhenInUseUsageDescription
+		</key>
+		<string>
+			Cette application nécessite l'accès à la localisation en tout temps et lorsque l'application est en cours d'utilisation pour fournir des informations et des notifications basées sur la localisation.
+		</string>
+		<key>
+			NSMicrophoneUsageDescription
+		</key>
+		<string>
+			Cette application nécessite l'accès au microphone pour enregistrer de l'audio.
+		</string>
+		<key>
+			NSPhotoLibraryAddUsageDescription
+		</key>
+		<string>
+			Cette application nécessite la permission d'ajouter des photos à la bibliothèque pour sauvegarder les photos prises.
+		</string>
+		<true />
+	</dict>
 </plist>
